// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UtilitiesShow renders the background-color utility documentation correctly 1`] = `
<div
  class="align-left"
>
  <h1
    class="m-b-8 capitalize gray-800 medium text-32"
  >
    background color
  </h1>
   
  <h2
    class="normal gray-500 text-16"
  >
    Utilities for controlling an element's background color.
  </h2>
   
  <utility-table-stub
    groups="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    utility="[object Object]"
  />
</div>
`;

exports[`UtilitiesShow renders the color utility documentation correctly 1`] = `
<div
  class="align-left"
>
  <h1
    class="m-b-8 capitalize gray-800 medium text-32"
  >
    color
  </h1>
   
  <h2
    class="normal gray-500 text-16"
  >
    Utilities for controlling an element's color.
  </h2>
   
  <utility-table-stub
    groups="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    utility="[object Object]"
  />
</div>
`;
